View Issue Details

IDProjectCategoryView StatusLast Update
0026792Open CASCADEOCCT:Visualizationpublic2016-04-20 15:50
ReporteraplAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026792: Visualization, Graphic3d - Z-fit support for transform persistence is missing after removing Visual3d_View
DescriptionSeveral lines of code of Visual3d_View::MinMaxValues implemented by #26344 are missing in current version after integration of 0024776. These lines enables support by z-fit procedure of zoom, rotate transform persistent objects.

The missing code should be merged back and test case added for this functionality.
Steps To Reproducepload ALL
box b 100 100 100
vdisplay b -trsfPers zoom
vzoom 0.01
vzfit
TagsNo tags attached.
Test case numberbugs vis bug26792

Attached Files

  • bug.png (702 bytes)

Relationships

parent of 0027061 closedabv Community Compile failure due to BOM in OpenGl/OpenGl_BVHClipPrimitiveTrsfPersSet.cxx 
child of 0024776 closedkgv Open CASCADE Visualization - inherit OpenGl_View from Graphic3d_CView 

Activities

apl

2015-10-21 11:09

developer  

bug.png (702 bytes)

git

2015-10-21 13:26

administrator   ~0047271

Branch CR26792 has been created by apl.

SHA-1: 9e9f74621649332e8a704d1eb36f603939d769fa


Detailed log of new commits:

Author: apl
Date: Wed Oct 21 13:25:57 2015 +0300

    0026792: Visualization, Graphic3d - Z-fit support for transform persistence is missing after removing Visual3d_View
    
    Add missing code for z-fit support for zoom, rotate persistent object.
    Fixed wrong statement that should enable frustum culling optimization for zoom, rotate persistent object.
    Added non-regression test case for z-clipping of transform persistent objects.

apl

2015-10-21 13:26

developer   ~0047272

Dear Kirill,

Please review the patch.

kgv

2015-10-21 19:26

developer   ~0047305

Please test the patch.

git

2015-10-22 17:30

administrator   ~0047346

Branch CR26792 has been updated forcibly by mkv.

SHA-1: 74cc8fbbb2d1eff5b75fa134188b66a19adfa210

mkv

2015-10-23 16:11

tester   ~0047389

Dear BugMaster,
Branch CR26792 was rebased on branch IR-2015-10-22 of occt git-repository.
SHA-1: 74cc8fbbb2d1eff5b75fa134188b66a19adfa210

mkv

2015-10-23 16:12

tester   ~0047390

Dear BugMaster,
Branch CR26792 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 74cc8fbbb2d1eff5b75fa134188b66a19adfa210

Number of compiler warnings:

occt component :
Linux: 1 (1 on master)
Windows: 0 (0 on master)

products component :
Linux: 39 (39 on master)
Windows: 0 (0 on master)

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
http://occt-tests/CR26792-master-occt-64/Debian70-64/bugs/vis/bug26792.html
http://occt-tests/CR26792-master-occt-64/Windows-64-VC10/bugs/vis/bug26792.html
bugs vis bug26792: OK

Testing on Linux:
occt component :
Total MEMORY difference: 92912829 / 92331080 [+0.63%]
Total CPU difference: 19673.739999999725 / 19731.34999999969 [-0.29%]
products component :
Total MEMORY difference: 26180396 / 26226349 [-0.18%]
Total CPU difference: 7750.079999999978 / 7363.820000000012 [+5.25%]

Testing on Windows:
occt component :
Total MEMORY difference: 58409217 / 58043302 [+0.63%]
Total CPU difference: 18161.324417998592 / 18133.197437699022 [+0.16%]
products component :
Total MEMORY difference: 17174870 / 17138954 [+0.21%]
Total CPU difference: 5588.080620799969 / 5652.477833599974 [-1.14%]

There are following differences in images found by testdiff.
http://occt-tests/CR26792-master-occt-64/Debian70-64/diff-Debian70-64.html
http://occt-tests/CR26792-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html

IMAGE bugs vis bug26719_2: bug26719_2_1.png differs
IMAGE bugs vis bug26719_2: bug26719_2_Driver1_Viewer1_View1.png differs
IMAGE bugs vis bug26719_2: bug26719_2_2.png differs
IMAGE bugs vis bug23120: bug23120_Driver1_Viewer1_View1.png differs

IMAGE v3d glsl stereo: stereo_anaglyph.png differs
IMAGE v3d glsl stereo: stereo_col.png differs
IMAGE v3d glsl stereo: stereo_overunder_anamorph.png differs
IMAGE v3d glsl stereo: stereo_sbs_anamorph.png differs
IMAGE v3d glsl texture_trsf: texture_trsf.png differs
IMAGE v3d glsl texture_trsf: texture_trsf_scale_glsl.png differs
IMAGE v3d glsl texture_trsf: texture_trsf_ffp.png differs
IMAGE v3d glsl texture_trsf: texture_trsf_glsl.png differs
IMAGE v3d glsl texture_trsf: texture_trsf_translate_ffp.png differs
IMAGE v3d glsl texture_trsf: texture_trsf_translate_glsl.png differs
IMAGE v3d glsl texture_trsf: texture_trsf_scale_ffp.png differs
IMAGE v3d glsl texture_trsf: texture_trsf_identity_glsl.png differs
IMAGE v3d glsl texture_trsf: texture_trsf_identity_ffp.png differs

IMAGE caf presentation F3: F3.png differs
IMAGE caf presentation F4: F4.png differs
IMAGE caf presentation G1: G1.png differs
IMAGE caf presentation K1: K1.png differs
IMAGE caf presentation H1: H1.png differs
IMAGE caf presentation I1: I1.png differs
IMAGE caf presentation J1: J1.png differs
IMAGE caf presentation F2: F2.png differs

IMAGE bugs vis bug5988: bug5988_Driver1_Viewer1_View1.png differs
IMAGE bugs modalg_2 bug22196: bug22196_Driver1_Viewer1_View1.png differs

mkv

2015-10-23 16:13

tester   ~0047392

Dear apl,
Branch CR26792 has been rejected due to:
- differences in images

git

2015-11-19 11:17

administrator   ~0048365

Branch CR26792_1 has been created by apl.

SHA-1: 44334d077c1a950627efdb81001c173c411a2387


Detailed log of new commits:

Author: apl
Date: Thu Nov 19 11:16:14 2015 +0300

    0026792: Visualization, Graphic3d - Z-fit support for transform persistence is missing after removing Visual3d_View
    
    Add missing code for z-fit support for zoom, rotate persistent object.
    Fixed wrong statement that should enable frustum culling optimization for zoom, rotate persistent object.
    Fixed BVH_LinearBuilder.lxx to correctly control number of items in leaf node for a case of items with equal bounding boxes.
    Added non-regression test case for z-clipping of transform persistent objects.

apl

2015-11-19 11:18

developer   ~0048366

Dear Kirill,

Please review branch CR26792_1. There is one more fix for BVH_LinearBuilder.

kgv

2015-11-19 11:26

developer   ~0048367

Please test updated patch.

git

2015-11-20 16:05

administrator   ~0048429

Branch CR26792_1 has been updated forcibly by apv.

SHA-1: 8489717ecbeb8e26d0e54c700d310f12459cb6a9

apv

2015-11-20 16:06

tester   ~0048430

Branch CR25792_1 has been rebased on the current master

apv

2015-11-23 14:08

tester   ~0048474

Dear BugMaster,

Branch CR26792_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: 8489717ecbeb8e26d0e54c700d310f12459cb6a9

Number of compiler warnings:
occt component:
   Linux: 0 (0 on master)
   Windows: 0 (0 on master)
   MacOS: 127 (127 on master)
products component:
   Linux: 39 (39 on master)
   Windows: 0 (0 on master)

Regressions/Differences:
Not detected

Testing cases:
bugs vis bug26792 - OK
http://occt-tests/CR26792-1-master-occt-64/Debian70-64/bugs/vis/bug26792.html
http://occt-tests/CR26792-1-master-occt-64/Windows-64-VC10/bugs/vis/bug26792.html

Testing on Linux:
Total MEMORY difference: 93273976 / 93571288 [-0.32%]
Total CPU difference: 19934.789999999786 / 19980.139999999952 [-0.23%]

Testing on Windows:
Total MEMORY difference: 58370922 / 58378770 [-0.01%]
Total CPU difference: 18489.30092039909 / 18194.47463049887 [+1.62%]

git

2016-04-17 14:14

administrator   ~0053097

Branch CR26792 has been deleted by kgv.

SHA-1: 74cc8fbbb2d1eff5b75fa134188b66a19adfa210

git

2016-04-17 14:14

administrator   ~0053098

Branch CR26792_1 has been deleted by kgv.

SHA-1: 8489717ecbeb8e26d0e54c700d310f12459cb6a9

Related Changesets

occt: master 97f937cc

2015-11-19 08:16:14

apl


Committer: bugmaster Details Diff
0026792: Visualization, Graphic3d - Z-fit support for transform persistence is missing after removing Visual3d_View

Add missing code for z-fit support for zoom, rotate persistent object.
Fixed wrong statement that should enable frustum culling optimization for zoom, rotate persistent object.
Fixed BVH_LinearBuilder.lxx to correctly control number of items in leaf node for a case of items with equal bounding boxes.
Added non-regression test case for z-clipping of transform persistent objects.
Affected Issues
0026792
mod - src/BVH/BVH_LinearBuilder.lxx Diff File
mod - src/Graphic3d/Graphic3d_CView.cxx Diff File
mod - src/OpenGl/OpenGl_BVHClipPrimitiveTrsfPersSet.cxx Diff File
mod - src/OpenGl/OpenGl_BVHTreeSelector.cxx Diff File
mod - src/OpenGl/OpenGl_Layer.cxx Diff File
mod - src/OpenGl/OpenGl_Structure.hxx Diff File
add - tests/bugs/vis/bug26792 Diff File

Issue History

Date Modified Username Field Change
2015-10-21 11:09 apl New Issue
2015-10-21 11:09 apl Assigned To => apl
2015-10-21 11:09 apl File Added: bug.png
2015-10-21 11:10 apl Relationship added child of 0024776
2015-10-21 11:37 apl Steps to Reproduce Updated
2015-10-21 11:37 apl Status new => assigned
2015-10-21 13:26 git Note Added: 0047271
2015-10-21 13:26 apl Note Added: 0047272
2015-10-21 13:26 apl Assigned To apl => kgv
2015-10-21 13:26 apl Status assigned => resolved
2015-10-21 19:26 kgv Note Added: 0047305
2015-10-21 19:26 kgv Assigned To kgv => bugmaster
2015-10-21 19:26 kgv Status resolved => reviewed
2015-10-22 14:33 mkv Assigned To bugmaster => mkv
2015-10-22 17:30 git Note Added: 0047346
2015-10-23 16:11 mkv Note Added: 0047389
2015-10-23 16:12 mkv Note Added: 0047390
2015-10-23 16:13 mkv Note Added: 0047392
2015-10-23 16:13 mkv Assigned To mkv => apl
2015-10-23 16:13 mkv Status reviewed => assigned
2015-10-23 16:13 mkv Test case number => bugs vis bug26792
2015-10-23 16:13 mkv Status assigned => feedback
2015-11-19 11:17 git Note Added: 0048365
2015-11-19 11:17 apl Status feedback => assigned
2015-11-19 11:18 apl Note Added: 0048366
2015-11-19 11:18 apl Assigned To apl => kgv
2015-11-19 11:18 apl Status assigned => resolved
2015-11-19 11:26 kgv Note Added: 0048367
2015-11-19 11:26 kgv Assigned To kgv => bugmaster
2015-11-19 11:26 kgv Status resolved => reviewed
2015-11-20 16:05 git Note Added: 0048429
2015-11-20 16:06 apv Note Added: 0048430
2015-11-20 16:06 apv Assigned To bugmaster => apv
2015-11-23 14:08 apv Note Added: 0048474
2015-11-23 14:08 apv Assigned To apv => bugmaster
2015-11-23 14:08 apv Status reviewed => tested
2015-11-27 12:21 bugmaster Changeset attached => occt master 97f937cc
2015-11-27 12:21 bugmaster Status tested => verified
2015-11-27 12:21 bugmaster Resolution open => fixed
2016-01-06 12:58 kgv Relationship added parent of 0027061
2016-04-17 14:14 git Note Added: 0053097
2016-04-17 14:14 git Note Added: 0053098
2016-04-20 15:42 aiv Fixed in Version => 7.0.0
2016-04-20 15:50 aiv Status verified => closed